--- a/public/factorialApp.html
+++ b/public/factorialApp.html
@@ -9,14 +9,16 @@
 </head>
 
 <body>
-    <div>
-        <button onclick= "factorialize()">
-            Factorial App
-            <input type="number" name="factorial" id="factorial">
-        </button>
+    <label for="Factorial Calculator"></label>
+    <input type="number" name="value1" id="integer">
+    <button class="button" onclick="factorialize()">Calculate Factorial</button>
+
+    <p>Factorial Result</p>
+    <div class="output">
+    <output for="Result" name="factorial" id="output1"></output>
     </div>
 </body>
-<script src="./factorialApp.js">
+<script src="./factorialApp1.js">
 </script>
 
 </html>
